k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bartek-adk-agent
    monitoring: bartek-adk-agent
  name: bartek-adk-agent
  namespace: ${GKE_NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: bartek-adk-agent
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
